--- a/cfg/SafeDroneTeleop.cfg
+++ b/cfg/SafeDroneTeleop.cfg
@@ -1,5 +1,5 @@
 #!/usr/bin/env python
-PACKAGE = "dynamic_tutorials"
+PACKAGE = "demo-teleop"
 
 from dynamic_reconfigure.parameter_generator_catkin import *
 
